[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/buttons/Button.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/actors/button.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 9, 2.5 )

[sub_resource type="RectangleShape2D" id=14]
resource_local_to_scene = true
extents = Vector2( 9, 7 )

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9, 7 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.176
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9, 7 ), Vector2( 9, 5.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, 2.5 ) ]
}
tracks/2/type = "animation"
tracks/2/path = NodePath("SecondaryAnimations")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "Toggle" ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "animation"
tracks/3/path = NodePath("SecondaryAnimations")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": PoolStringArray( "Glow" ),
"times": PoolRealArray( 0.16 )
}

[sub_resource type="Animation" id=36]
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6.0 ]
}

[sub_resource type="Animation" id=34]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=37]
resource_name = "Toggle"
length = 0.16
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.016, 0.032, 0.048, 0.064, 0.08, 0.096, 0.112, 0.128, 0.144 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 1.0, 2.0, 2.0, 3.0, 4.0, 5.0, 5.0, 5.0, 5.0 ]
}

[node name="Button" type="StaticBody2D"]
pause_mode = 2
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )
__meta__ = {
"toggled": false,
"type": "button"
}
position_snap = Vector2( 8, 8 )

[node name="ButtonSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3
vframes = 4
__meta__ = {
"_editor_description_": ""
}

[node name="DetectPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( 0, -4.5 )
shape = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.117647, 0.780392, 0, 1 )
light_mask = 0
position = Vector2( 0, 1 )
shape = SubResource( 14 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 15 )
anims/ToggledStatus = SubResource( 16 )

[node name="SecondaryAnimations" type="AnimationPlayer" parent="."]
anims/Glow = SubResource( 36 )
anims/RESET = SubResource( 34 )
anims/Toggle = SubResource( 37 )

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
